[package]
name = "pinocchio_arbitrage"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.5.0"
solana-program = "~1.17"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
